--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,30 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<% if @doctors.present? %>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Days from - to</th>
+        <th>Time from - to</th>
+        <th>slot range(minutes)</th>
+        <th>book appointment</th>
+        <th>appointments</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @doctors.each do |doctor| %>
+        <tr>
+          <td class="text-center"><%= doctor.name %></td>
+          <td class="text-center"><%= doctor.availability.start_day %> - <%= doctor.availability.end_day %></td>
+          <td class="text-center"><%= doctor.availability.start_time.strftime("%H:%M") %> - <%= doctor.availability.end_time.strftime("%H:%M") %></td>
+          <td class="text-center"><%= doctor.availability.slot_range %></td>
+          <% if false %>
+          <td><%= link_to 'book appointment', new_appointment_path(id: doctor.id), class:"btn btn-primary" %></td>
+          <% end %>
+          <td class="text-center"><%= doctor.appointments.count%></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <h1>No Doctors Found!!!</h1>
+<% end %>
