--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <%= button_to "logout", destroy_user_session_path, method: :delete  %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
