added appointment, availability modules and added appointment create logic

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,9 +5,10 @@
         <th>Name</th>
         <th>Days from - to</th>
         <th>Time from - to</th>
-        <th>slot range(minutes)</th>
-        <th>book appointment</th>
-        <th>appointments</th>
+        <th>Slot Range(minutes)</th>
+        <th>Book Appointment</th>
+        <th>Appointments</th>
+        <th>Show Appointments</th>
       </tr>
     </thead>
     <tbody>
@@ -17,10 +18,9 @@
           <td class="text-center"><%= doctor.availability.start_day %> - <%= doctor.availability.end_day %></td>
           <td class="text-center"><%= doctor.availability.start_time.strftime("%H:%M") %> - <%= doctor.availability.end_time.strftime("%H:%M") %></td>
           <td class="text-center"><%= doctor.availability.slot_range %></td>
-          <% if false %>
           <td><%= link_to 'book appointment', new_appointment_path(id: doctor.id), class:"btn btn-primary" %></td>
-          <% end %>
           <td class="text-center"><%= doctor.appointments.count%></td>
+          <td><%= link_to 'show appointment', appointment_path(doctor.id), class:"btn btn-primary" %></td>
         </tr>
       <% end %>
     </tbody>
