--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <% if @doctor_view %>
   <%= render partial: 'availability' %>
 <% else %>
-  <%= render partial: '_doctor_list' %>
+  <%= render partial: 'doctor_list' %>
 <% end %>
